Fixed spacing issues at bottom of the page due to nav bar and added hover cursor effects

--- a/481 Portfolio/CookingInstructor/Shared/NavMenu.razor.css
+++ b/481 Portfolio/CookingInstructor/Shared/NavMenu.razor.css
@@ -1,7 +1,14 @@
 a {
     color: black;
+    text-decoration: none;
 }
 a:focus {
+    color: black;
+    text-decoration: none;
+}
+
+a:hover{
+    text-decoration: none;
     color: black;
 }
 
@@ -17,4 +24,3 @@ li {
 .full-width {
     width: 100%;
 }
-
